--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+group = 'com.dbproject'
+version = '1.0-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
@@ -23,10 +23,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') // jpa
+    implementation('org.springframework.boot:spring-boot-starter-mustache') // mustache
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // social login
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.jetbrains:annotations:20.1.0'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation('org.projectlombok:lombok')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
