--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dbd
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dbd
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 jwt.secret=dkssudgktpdydkssudgktpdydkssudgktpdy
