--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.profiles.include=db, jwt
 
-server.port=8080
+#server.port=8088
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATASOURCE_URL}
